selfhost/test/typechecker/match/error_exhaustive_after_else.out
Error at %FILE_NAME%:3:3
Unreachable match case
  |    _ => "efgh"
       ^
The previous case(s) cover all possibilities for match target type 'Int'
